--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -24,7 +24,7 @@
 		}
 
 	body {
-		background: _palette(accent8);
+		background: _palette(bakgrunnsfarge);
 
 		// Prevents animation/transition "flicker" on page load.
 		// Automatically added/removed by js/main.js.
