--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -22,6 +22,7 @@
 	$font: (
 		family:				('Source Sans Pro', Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
+		testfont:			('Monospace'),
 		weight:				300,
 		weight-bold:		600,
 		letter-spacing:		0.025em,
@@ -45,5 +46,13 @@
 		accent5:			#8ea9e8,
 		accent6:			#87c5a4,
 		accent7:			#c5d5cb,
-		accent8: 			#9fa8a3
+		accent8: 			#9fa8a3,
+		bakgrunnsfarge:		#dff9ba,
+		astridsintekstfarge:#1e3932,
+		champagne:			#f6eeab,
+		spring_bud:			#c9dd94,
+		eton_blue:			#9dcf94,
+		sea_green:			#7ec796,
+		ocean_green:		#5ebd96,
+		persian_green:		#11a797
 	);
