Changes to site colors and placements

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -6,8 +6,9 @@
 
 /* Type */
 
+	//- Second text in banner parameters
 	body, input, select, textarea {
-		color: _palette(fg);
+		color: _palette(tekstfarge);
 		font-family: _font(family);
 		font-size: 17pt;
 		font-weight: _font(weight);
@@ -46,8 +47,9 @@
 		}
 	}
 
+	//- Second text in tile parameters
 	strong, b {
-		color: _palette(fg-bold);
+		color: _palette(tekstfarge);
 		font-weight: _font(weight-bold);
 	}
 
@@ -64,7 +66,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: _palette(fg-bold);
+		color: _palette(tekstfarge);
 		font-weight: _font(weight-bold);
 		line-height: 1.65;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
