--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -34,7 +34,7 @@
 			min-height: 23em;
 			overflow: hidden;
 			position: relative;
-			width: 40%;
+			width: 50%;
 
 			.image {
 				display: none;
@@ -45,6 +45,7 @@
 				z-index: 3;
 			}
 
+			//- Tile text size
 			h3 {
 				font-size: 1.75em;
 
