--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -48,7 +48,7 @@
 		accent7:			#c5d5cb,
 		accent8: 			#9fa8a3,
 		bakgrunnsfarge:		#dff9ba,
-		astridsintekstfarge:#1e3932,
+		tekstfarge:			#1e3932,
 		champagne:			#f6eeab,
 		spring_bud:			#c9dd94,
 		eton_blue:			#9dcf94,
