--- a/_sass/components/_section.scss
+++ b/_sass/components/_section.scss
@@ -25,9 +25,10 @@
 				  margin-bottom: 0;
 				  width: calc(100% + 0.5em);
 
+				  //- Tile underline parameters
 				  &:after {
 					    content: '';
-					    background-color: _palette(fg-bold);
+					    background-color: _palette(tekstfarge);
 					    display: block;
 					    height: 2px;
 					    margin: 0.325em 0 0.5em 0;
