--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -24,11 +24,12 @@
 		position: relative;
 		top: -3.25em;
 
+		//- Top tile parameters
 		&:after {
 			@include vendor('transition', 'opacity #{_duration(banner)} ease');
 			@include vendor('transition-delay', '0.75s');
 			@include vendor('pointer-events', 'none');
-			background-color: _palette(bg);
+			background-color: _palette(ocean_green);
 			content: '';
 			display: block;
 			height: 100%;
@@ -40,6 +41,7 @@
 			z-index: 1;
 		}
 
+		//- Main text in the banner
 		h1 {
 			font-size: 3.25em;
 		}
@@ -85,6 +87,7 @@
 					margin-left: 0;
 				}
 
+				//- This is the small text in the banner
 				p {
 					font-size: 0.7em;
 					font-weight: _font(weight-bold);
@@ -94,10 +97,11 @@
 			}
 		}
 
+		//- Size of top tile
 		&.major {
 			height: 75vh;
-			min-height: 30em;
-			max-height: 50em;
+			min-height: 10em;
+			max-height: 20em;
 
 			&.alt {
 				  opacity: 0.75;
