--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -11,9 +11,10 @@
 		100% { top: 0; opacity: 1; }
 	}
 
+	//- Header parameters
 	#header {
 		@include vendor('display', 'flex');
-		background-color: _palette(accent7);
+		background-color: _palette(eton_blue);
 		box-shadow: 0 0 0.25em 0 rgba(0,0,0,0.15);
 		cursor: default;
 		font-weight: _font(weight-bold);
@@ -36,13 +37,14 @@
 			line-height: inherit;
 			padding: 0 1.5em;
 
+			//- Square top box parameters
 			strong {
 				@include vendor('transition', (
 					'background-color #{_duration(transition)} ease-in-out',
 					'color #{_duration(transition)} ease-in-out'
 				));
-				background-color: _palette(fg-bold);
-				color: _palette(bg);
+				background-color: _palette(spring_bud);
+				color: _palette(tekstfarge);
 				display: inline-block;
 				line-height: 1.65em;
 				margin-right: 0.325em;
@@ -86,8 +88,9 @@
 				&[href="#menu"] {
 					padding-right: 3.325em !important;
 
+					//- Hamburger menu parameters
 					&:before, &:after {
-						background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_palette(fg-bold)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
+						background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_palette(tekstfarge)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
 						background-position: center;
 						background-repeat: no-repeat;
 						background-size: 24px 32px;
