--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -6,8 +6,9 @@
 
 /* Main */
 
+	//- Tile background color when hovering
 	#main {
-		background-color: _palette(bg-alt);
+		background-color: _palette(persian_green);
 
 		> * {
 			border-top: solid 1px _palette(border);
@@ -21,6 +22,6 @@
 
 		&.alt {
 			background-color: transparent;
-			border-bottom: solid 1px _palette(border);
+			border-bottom: solid 1px _palette(spring_bud);
 		}
 	}
