--- a/_sass/layout/_menu.scss
+++ b/_sass/layout/_menu.scss
@@ -6,6 +6,7 @@
 
 /* Menu */
 
+	//- Menu window text and color parameters
 	#menu {
 		@include vendor('transition', (
 			'transform #{_duration(menu)} ease',
@@ -16,7 +17,7 @@
 		@include vendor('display', 'flex');
 		@include vendor('justify-content', 'center');
 		@include vendor('pointer-events', 'none');
-		background: transparentize(_palette(accent8), 0.1);
+		background: transparentize(_palette(ocean_green), 0.1);
 		box-shadow: none;
 		height: 100%;
 		left: 0;
@@ -66,7 +67,7 @@
 
 					> a:not(.button) {
 						border: 0;
-						border-top: solid 1px _palette(border);
+						border-top: solid 1px _palette(border); //- Underline color in menu
 						display: block;
 						font-size: 0.8em;
 						font-weight: _font(weight-bold);
@@ -123,7 +124,7 @@
 			}
 
 			&:before {
-				background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20px" height="20px" viewBox="0 0 20 20" zoomAndPan="disable"><style>line { stroke: #{_palette(fg-bold)}; stroke-width: 2; }</style><line x1="0" y1="0" x2="20" y2="20" /><line x1="20" y1="0" x2="0" y2="20" /></svg>');
+				background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20px" height="20px" viewBox="0 0 20 20" zoomAndPan="disable"><style>line { stroke: #{_palette(tekstfarge)}; stroke-width: 2; }</style><line x1="0" y1="0" x2="20" y2="20" /><line x1="20" y1="0" x2="0" y2="20" /></svg>');
 			}
 
 			&:after {
