--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -34,7 +34,7 @@
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.85;
+			opacity: 1.0; //- 0.85
 			position: absolute;
 			top: 0;
 			width: 100%;
