Added some temporary author information in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,38 @@
 				</div>
 			</section>
 		</section>
+			<section>
+					<br></br>
+					<h3 style="margin: 0 0 _size(element-margin) 0;">Hvem er vi?</h3>
+					<div class="row">
+						<div class="column">
+							<figure>
+								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+									<figcaption> Håvard Olai Kopperstad </figcaption>
+							</figure>
+						</div><div class="column">
+							<figure>
+								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+									<figcaption> Håvard Olai Kopperstad </figcaption>
+							</figure>
+						</div><div class="column">
+							<figure>
+								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+									<figcaption> Håvard Olai Kopperstad </figcaption>
+							</figure>
+						</div><div class="column">
+							<figure>
+								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+									<figcaption> Håvard Olai Kopperstad </figcaption>
+							</figure>
+						</div><div class="column">
+							<figure>
+								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+									<figcaption> Håvard Olai Kopperstad </figcaption>
+							</figure>
+						</div>
+					  </div>
+			</section>
 	</div>
 </section>
 
@@ -29,7 +61,7 @@
 				{% endfor %}
 			</ul>
 			<ul class="copyright">
-				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
+				<li>&copy; {{ site.title }} </li>
 				<li>Site template developed by: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 			</ul>
 		</div>
