Visual changes based on feedback. Added about page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 		</section>
 			<section>
 					<br></br>
-					<h3 style="margin: 0 0 _size(element-margin) 0;">Hvem er vi?</h3>
+					<h3 style="margin: 0 0 _size(element-margin) 0;"><a href="about_us.html">Hvem er vi?</a></h3>
 					<div class="row">
 						<div class="column">
 							<figure>
