--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -141,7 +141,7 @@
 			position: absolute;
 
 			&.style1 { .logo { strong { color: _palette(accent1); } } }
-			&.style2 { .logo { strong { color: _palette(accent2); } } }
+			&.style2 { .logo { strong { color: _palette(tekstfarge); } } }
 			&.style3 { .logo { strong { color: _palette(accent3); } } }
 			&.style4 { .logo { strong { color: _palette(accent4); } } }
 			&.style5 { .logo { strong { color: _palette(accent5); } } }
