Tried to fix the footer. Still some work to do

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,14 +10,17 @@
 					<a href="mailto:{{ site.email }}">{{ site.email }}</a>
 				</div>
 			</section>
-		</section>
 			<section>
-					<br></br>
-					<h3 style="margin: 0 0 _size(element-margin) 0;"><a href="about_us.html">Hvem er vi?</a></h3>
+				<h3 style="margin: 0 0 _size(element-margin) 0;"><a href="about_us.html">Hvem er vi?</a></h3>
 					<div class="row">
 						<div class="column">
 							<figure>
-								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+								<img src="assets/images/portrait_anni.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+									<figcaption> Håvard Olai Kopperstad </figcaption>
+							</figure>
+						</div><div class="column">
+							<figure>
+								<img src="assets/images/portrait_astrid.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
 									<figcaption> Håvard Olai Kopperstad </figcaption>
 							</figure>
 						</div><div class="column">
@@ -27,22 +30,30 @@
 							</figure>
 						</div><div class="column">
 							<figure>
-								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+								<img src="assets/images/portrait_jo.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
 									<figcaption> Håvard Olai Kopperstad </figcaption>
 							</figure>
 						</div><div class="column">
 							<figure>
-								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
-									<figcaption> Håvard Olai Kopperstad </figcaption>
-							</figure>
-						</div><div class="column">
-							<figure>
-								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+								<img src="assets/images/portrait_maren.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
 									<figcaption> Håvard Olai Kopperstad </figcaption>
 							</figure>
 						</div>
 					  </div>
 			</section>
+		</section>
+		<section><br><br>
+			<h3>Noen nyttige lenker</h3>
+			<div class="contact">
+				<a href="https://nrk.no">NRK.no</a>
+			</div>
+			<div class="contact">
+				<a href="https://nrk.no">NRK.no</a>
+			</div>
+			<div class="contact">
+				<a href="https://nrk.no">NRK.no</a>
+			</div>
+		</section>
 	</div>
 </section>
 
