Changes the banner photo. Footer needs fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,27 +16,27 @@
 						<div class="column">
 							<figure>
 								<img src="assets/images/portrait_anni.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
-									<figcaption> Håvard Olai Kopperstad </figcaption>
+									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div><div class="column">
 							<figure>
 								<img src="assets/images/portrait_astrid.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
-									<figcaption> Håvard Olai Kopperstad </figcaption>
+									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div><div class="column">
 							<figure>
 								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
-									<figcaption> Håvard Olai Kopperstad </figcaption>
+									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div><div class="column">
 							<figure>
 								<img src="assets/images/portrait_jo.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
-									<figcaption> Håvard Olai Kopperstad </figcaption>
+									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div><div class="column">
 							<figure>
 								<img src="assets/images/portrait_maren.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
-									<figcaption> Håvard Olai Kopperstad </figcaption>
+									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div>
 					  </div>
@@ -45,13 +45,13 @@
 		<section><br><br>
 			<h3>Noen nyttige lenker</h3>
 			<div class="contact">
-				<a href="https://nrk.no">NRK.no</a>
+				<a href="https://www.forbrukerradet.no/forside/bolig/husleie/">Forbrukerrådet</a>
 			</div>
 			<div class="contact">
-				<a href="https://nrk.no">NRK.no</a>
+				<a href="https://www.htu.no/klage-og-tilsvar/send-inn-klage">Husleietvistutvalget</a>
 			</div>
 			<div class="contact">
-				<a href="https://nrk.no">NRK.no</a>
+				<a href="https://www.leieboerforeningen.no/rettigheter/">Leieboerforeningen</a>
 			</div>
 		</section>
 	</div>
@@ -74,6 +74,7 @@
 			<ul class="copyright">
 				<li>&copy; {{ site.title }} </li>
 				<li>Site template developed by: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
+				<li>Pictures by: <a href="https://www.freepik.com/" target="_blank">Freepik</a></li>
 			</ul>
 		</div>
 	</footer>
