--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,27 +15,27 @@
 					<div class="row">
 						<div class="column">
 							<figure>
-								<img src="assets/images/portrait_anni.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+								<img src="assets/images/portrait_anni.png" style="display: block; margin-left: auto; margin-right: auto; width: 100px;"/>
 									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div><div class="column">
 							<figure>
-								<img src="assets/images/portrait_astrid.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+								<img src="assets/images/portrait_astrid.png" style="display: block; margin-left: auto; margin-right: auto; width: 100px;"/>
 									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div><div class="column">
 							<figure>
-								<img src="assets/images/portrait_hok.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+								<img src="assets/images/portrait_hok.png" style="display: block; margin-left: auto; margin-right: auto; width: 100px;"/>
 									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div><div class="column">
 							<figure>
-								<img src="assets/images/portrait_jo.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+								<img src="assets/images/portrait_jo.png" style="display: block; margin-left: auto; margin-right: auto; width: 100px;"/>
 									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div><div class="column">
 							<figure>
-								<img src="assets/images/portrait_maren.jpg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+								<img src="assets/images/portrait_maren.png" style="display: block; margin-left: auto; margin-right: auto; width: 100px;"/>
 									<!-- <figcaption> Håvard Olai Kopperstad </figcaption> -->
 							</figure>
 						</div>
